--- a/src/App.css
+++ b/src/App.css
@@ -51,21 +51,17 @@ a {
   object-position: 0 0;
 }
 
-.score div {
+.score > div {
   width: 290px;
   height: 290px;
 }
-/* .cal-input {
-  text-align: right;
-  width: 100%;
+
+.select-btn {
+  background: transparent;
   border: none;
-  outline: none;
-  border-radius: 15px;
-  padding: 10px 20px;
-  margin: 5px 0;
-  opacity: 0.7;
-  font-size: 28px;
-} */
+  width: 70px;
+  height: 70px;
+}
 
 .game-btns {
   display: flex;
@@ -75,7 +71,7 @@ a {
 }
 
 .custom-btn,
-.equals-btn {
+.select-btns {
   border: none;
   width: 120px;
   height: 60px;
@@ -87,14 +83,14 @@ a {
   transition: all 0.3s;
 }
 .custom-btn:hover,
-.equals-btn:hover {
+.select-btns:hover {
   background: coral;
   box-shadow: 0px 3px 5px 3px rgba(0, 0, 0, 0.16),
     0 3px 5px 3px rgba(0, 0, 0, 0.12);
 }
 
 .custom-btn:active,
-.equals-btn:active {
+.select-btns:active {
   /* background-color: #2ab6a6; */
   opacity: 0.5;
   box-shadow: unset;
